[package]
name = "hutils"
version = "0.1.0"
authors = ["hansung <hansung080@hanmail.net>"]
description = "various utilities"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
